Employee dashboard sidebar changes

--- a/frappe/frappe/www/hr-apps.html
+++ b/frappe/frappe/www/hr-apps.html
@@ -210,7 +210,7 @@
       <p>Dashboard</p>
     </div>
     <div class="icon-item">
-      <a href="/app/employee-lifecycle">
+      <a href="/app/dashboard-view/employee%20lifecycle">
         <img src="/assets/hrms/images/employees.png" alt="Employee">
       </a>
       <p>Employee</p>
