--- a/frappe/frappe/www/applications.html
+++ b/frappe/frappe/www/applications.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="csrf-token" content="{{ csrf_token }}">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>APPLICATIONS</title>
   <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
   <style>
@@ -44,7 +45,7 @@
       z-index: 999;
     }
 
-    .icon-container {
+    /* .icon-container {
       background: #dfdde8;
       padding: 100px;
       border-radius: 32px;
@@ -57,7 +58,22 @@
       animation: slideInFromRight 0.8s ease-out forwards;
       text-align: center;
       position: relative;
-    }
+    } */
+
+	.icon-container {
+		padding: 5vw;
+		border-radius: 2rem;
+		box-shadow: 8px 8px 20px #ffffff;
+		display: grid;
+		grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+		gap: 2.5vw;
+		width: 90%;
+		max-width: 1200px;
+		animation: slideInFromRight 0.8s ease-out forwards;
+		text-align: center;
+		position: relative;
+	}
+
 
     .icon-item {
       display: flex;
@@ -68,18 +84,20 @@
     }
 
     .icon-item a {
-      background-color: #f0fdf4;
-      border-radius: 50%;
-      width: 120px;
-      height: 120px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.08),
-                  -2px -2px 6px rgba(255, 255, 255, 0.8);
-      transition: all 0.3s ease;
-      text-decoration: none;
-      margin-bottom: 12px;
+      	background-color: #f0fdf4;
+      	border-radius: 50%;
+		/* width: 120px;
+		height: 120px; */
+		width: 7rem;
+  		height: 7rem;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.08),
+					-2px -2px 6px rgba(255, 255, 255, 0.8);
+		transition: all 0.3s ease;
+		text-decoration: none;
+		margin-bottom: 12px;
     }
 
     .icon-item a:hover {
@@ -87,10 +105,12 @@
     }
 
     .icon-item img {
-      width: 70px;
-      height: 70px;
-      object-fit: contain;
-      transition: transform 0.3s ease;
+      /* width: 70px;
+      height: 70px; */
+	   	width: 3.5rem;
+  		height: 3.5rem;
+      	object-fit: contain;
+      	transition: transform 0.3s ease;
     }
 
     .icon-item a:hover img {
@@ -98,10 +118,11 @@
     }
 
     .icon-item p {
-      margin: 0;
-      font-size: 16px;
-      color: #8a6d1d;
-      font-weight: 600;
+      	margin: 0;
+      	/* font-size: 16px; */
+	   	font-size: clamp(0.9rem, 1vw + 0.5rem, 1.2rem);
+      	color: #8a6d1d;
+      	font-weight: 600;
     }
 
     .icon-item:nth-child(n) {
@@ -133,6 +154,20 @@
     .logout-btn:hover {
       transform: scale(1.2);
     }
+
+	@media (max-width: 600px) {
+		.icon-container {
+			padding: 4vw;
+			grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+			gap: 1.5vw;
+		}
+		.logout-btn {
+			bottom: 5%;
+			left: 5%;
+			font-size: 14px;
+		}
+	}
+
   </style>
 </head>
 <body>
