--- a/frappe/frappe/www/hr-apps.html
+++ b/frappe/frappe/www/hr-apps.html
@@ -253,7 +253,7 @@
       <p>Employee</p>
     </div>
     <div class="icon-item">
-      <a href="app/recruitment">
+      <a href="app/dashboard-view/Recruitment">
         <img src="/assets/hrms/images/recruitment.png" alt="Recruitment">
       </a>
       <p>Recruitment</p>
